@@ -35,6 +35,7 @@ The following bugs are resolved with this release:
   [24744] io: Remove the copy_file_range emulation
   [24986] alpha: new getegid, geteuid and getppid syscalls used
     unconditionally
+  [25203] libio: Disable vtable validation for pre-2.1 interposed handles
   [25204] Ignore LD_PREFER_MAP_32BIT_EXEC for SUID programs
 
 Security related changes:
